// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings.vue given badges are disabled renders 1`] = `
<div>
  <div>
    <div
      class="ds-my-small"
    >
      <h1
        class="ds-heading ds-heading-h1"
      >
        
      </h1>
    </div>
     
    <div
      class="ds-my-large"
    />
     
    <div
      class="ds-flex ds-flex-gap-small"
    >
      <div
        class="menu-container"
      >
        <nav
          class="os-menu"
        >
          <ul
            class="os-menu-list"
          >
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings"
                to="/settings"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/my-email-address"
                to="/settings/my-email-address"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/security"
                to="/settings/security"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/privacy"
                to="/settings/privacy"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/my-social-media"
                to="/settings/my-social-media"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/muted-users"
                to="/settings/muted-users"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/blocked-users"
                to="/settings/blocked-users"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/embeds"
                to="/settings/embeds"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/notifications"
                to="/settings/notifications"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/data-download"
                to="/settings/data-download"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/delete-account"
                to="/settings/delete-account"
              />
            </li>
          </ul>
        </nav>
      </div>
       
      <div
        class="settings-content"
        id="settings-content"
      >
        <transition-stub
          appear="true"
          name="slide-up"
        >
          <nuxt-child-stub />
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`settings.vue given badges are enabled renders 1`] = `
<div>
  <div>
    <div
      class="ds-my-small"
    >
      <h1
        class="ds-heading ds-heading-h1"
      >
        
      </h1>
    </div>
     
    <div
      class="ds-my-large"
    />
     
    <div
      class="ds-flex ds-flex-gap-small"
    >
      <div
        class="menu-container"
      >
        <nav
          class="os-menu"
        >
          <ul
            class="os-menu-list"
          >
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings"
                to="/settings"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/my-email-address"
                to="/settings/my-email-address"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/badges"
                to="/settings/badges"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/security"
                to="/settings/security"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/privacy"
                to="/settings/privacy"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/my-social-media"
                to="/settings/my-social-media"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/muted-users"
                to="/settings/muted-users"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/blocked-users"
                to="/settings/blocked-users"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/embeds"
                to="/settings/embeds"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/notifications"
                to="/settings/notifications"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/data-download"
                to="/settings/data-download"
              />
            </li>
            <li
              class="os-menu-item os-menu-item-level-0"
            >
              <a
                class="os-menu-item-link"
                href="/settings/delete-account"
                to="/settings/delete-account"
              />
            </li>
          </ul>
        </nav>
      </div>
       
      <div
        class="settings-content"
        id="settings-content"
      >
        <transition-stub
          appear="true"
          name="slide-up"
        >
          <nuxt-child-stub />
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;
